@@ -142,7 +142,7 @@ document for an overview of all the PCRE2 documentation.
 <br>
 <br>
 <b>int pcre2_set_character_tables(pcre2_compile_context *<i>ccontext</i>,</b>
-<b>  const unsigned char *<i>tables</i>);</b>
+<b>  const uint8_t *<i>tables</i>);</b>
 <br>
 <br>
 <b>int pcre2_set_compile_extra_options(pcre2_compile_context *<i>ccontext</i>,</b>
@@ -791,7 +791,7 @@ interpreted matching functions, <i>pcre2_match()</i> and
 <br>
 <br>
 <b>int pcre2_set_character_tables(pcre2_compile_context *<i>ccontext</i>,</b>
-<b>  const unsigned char *<i>tables</i>);</b>
+<b>  const uint8_t *<i>tables</i>);</b>
 <br>
 <br>
 The value must be the result of a call to <i>pcre2_maketables()</i>, whose only
@@ -3851,7 +3851,7 @@ Cambridge, England.
 </P>
 <br><a name="SEC42" href="#TOC1">REVISION</a><br>
 <P>
-Last updated: 22 July 2019
+Last updated: 28 July 2019
 <br>
 Copyright &copy; 1997-2019 University of Cambridge.
 <br>
