@@ -261,7 +261,7 @@ PCRE2 NATIVE API COMPILE CONTEXT FUNCTIONS
          uint32_t value);
 
        int pcre2_set_character_tables(pcre2_compile_context *ccontext,
-         const unsigned char *tables);
+         const uint8_t *tables);
 
        int pcre2_set_compile_extra_options(pcre2_compile_context *ccontext,
          uint32_t extra_options);
@@ -831,7 +831,7 @@ PCRE2 CONTEXTS
        pcre2_dfa_match().
 
        int pcre2_set_character_tables(pcre2_compile_context *ccontext,
-         const unsigned char *tables);
+         const uint8_t *tables);
 
        The value must be the result of a  call  to  pcre2_maketables(),  whose
        only argument is a general context. This function builds a set of char-
@@ -3706,7 +3706,7 @@ AUTHOR
 
 REVISION
 
-       Last updated: 22 July 2019
+       Last updated: 28 July 2019
        Copyright (c) 1997-2019 University of Cambridge.
 ------------------------------------------------------------------------------
  
