@@ -114,6 +114,9 @@ within it, the nested lookbehind was not correctly processed. For example, if
 22. A branch that started with (*ACCEPT) was not being recognized as one that
 could match an empty string. 
 
+23. Corrected pcre2_set_character_tables() tables data type: was const unsigned
+char * instead of const uint8_t *, as generated by pcre2_maketables().
+
 
 Version 10.33 16-April-2019
 ---------------------------
